--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/projecttracker
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.data.mongodb.host=
-spring.data.mongodb.port=
-spring.data.mongodb.username=
-spring.data.mongodb.password=
-spring.data.mongodb.database=
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+#spring.data.mongodb.username=
+#spring.data.mongodb.password=
+spring.data.mongodb.database=projecttrackerlogs
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
