--- a/pom.xml
+++ b/pom.xml
@@ -81,11 +81,16 @@
                 <scope>test</scope>
             </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>5.18.0</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
