--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 #spring.data.mongodb.username=
 #spring.data.mongodb.password=
+logging.level.org.springframework.cache=DEBUG
 spring.data.mongodb.database=projecttrackerlogs
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
